[build-system]
requires = [ "setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "budgie"
description = "Budgets and margin calculation."
authors = [
  {name = "Patrick Ingraham", email = "pingraham@arizona.edu"},
]
readme = {file = "README.md", content-type = "text/markdown"}
license = { text = "GPL" }
classifiers = [ "Programming Language :: Python :: 3" ]
dynamic = [ "version" ]
requires-python = ">= 3.8"
dependencies = [
'pyyaml', 'numpy', 'poppy', 'pandas', 'plantuml',
]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools_scm]
write_to = "src/budgie/version.py"
